package twisk.mondeIG;

public class ActiviteIG extends EtapeIG {
    public ActiviteIG(String nom, String identifiant, int largeur, int hauteur) {
        super(nom, identifiant, largeur, hauteur);
    }
}
