package twisk.vues;

public interface Observateur {
    void reagir();
}